fix: modify header to display properly on smaller screens
Make header responsive by introducing a dropdown for nav links to display on small screens

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header {
   background-color: #201c2d;
   color: #fff;
   padding: 1.2rem;
+  position: sticky;
 }
 
 .header-content {
@@ -46,8 +47,42 @@ header {
   display: flex;
 }
 
+.mobile-menu-toggle {
+  display: none;
+  position: relative;
+}
+
+.mobile-menu {
+  position: absolute;
+  top: 65px;
+  left: 20px;
+  padding: 0.75rem;
+  border-radius: 4px;
+  width: fit-content;
+  height: fit-content;
+  background-color: #201c2d;
+  z-index: 10;
+  display: none;
+  flex-direction: column;
+  gap: 0.75rem;
+  transform: translateX(-100%);
+  transition: all 0.25s ease-out;
+}
+
+@media screen and (max-width: 768px) {
+  .header-right {
+    display: none;
+  }
+
+  .mobile-menu-toggle {
+    display: block;
+    cursor: pointer;
+  }
+}
+
 .header-item {
-  margin-left: 1rem;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .header-item a {
@@ -84,6 +119,7 @@ header {
 main {
   background-color: #f5f5f5;
   padding: 1.2rem;
+  height: max-content;
 }
 
 /* About */
